style: fix spacing of p and ol issue for urbanspr

--- a/app/features/projects/subpages/projects/project.module.css
+++ b/app/features/projects/subpages/projects/project.module.css
@@ -55,3 +55,12 @@
 figcaption{
     font-style: italic;
 }
+
+/** for urban sprouts **/
+.issuesP{
+    margin-bottom: 0 !important;
+}
+
+.issuesList{
+    margin-bottom: 28px;
+}
